# Secure_movie_django

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  pytest.ini
Secure_movie_django/: asgi.py  settings.py  urls.py  wsgi.py
movies/: admin.py  models.py  permissions.py  pytest.ini  serializers.py  urls.py  validators.py  views.py
movies/migrations/: 0001_initial.py  0002_remove_movie_image_url.py  0003_like.py  0004_movie_image_url.py  0004_remove_like_liked.py  0005_merge_0004_movie_image_url_0004_remove_like_liked.py  0006_movie_director.py  0007_alter_movie_director.py
tests/movies/: test_models.py  test_urls.py  test_validators.py
