[tool.poetry]
name = "secure-movie-django"
version = "0.1.0"
description = ""
authors = ["Emanuele Conforti <manu.conforti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
